@@ -2,25 +2,24 @@ package com.kuit.agarang.domain.home.service;
 
 import com.kuit.agarang.domain.ai.service.AIService;
 import com.kuit.agarang.domain.baby.model.entity.Baby;
-import com.kuit.agarang.domain.baby.model.entity.Character;
 import com.kuit.agarang.domain.baby.repository.BabyRepository;
 import com.kuit.agarang.domain.home.model.dto.HomeResponse;
-import com.kuit.agarang.domain.login.utils.AuthenticationUtil;
 import com.kuit.agarang.domain.member.model.entity.Member;
 import com.kuit.agarang.domain.member.repository.MemberRepository;
-import com.kuit.agarang.domain.memory.model.entity.Memory;
+import com.kuit.agarang.domain.memory.model.dto.MemoryImageDTO;
 import com.kuit.agarang.domain.memory.repository.MemoryRepository;
 import com.kuit.agarang.global.common.exception.exception.BusinessException;
 import com.kuit.agarang.global.common.model.dto.BaseResponseStatus;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
@@ -29,40 +28,33 @@ public class HomeService {
   private final BabyRepository babyRepository;
   private final MemberRepository memberRepository;
   private final MemoryRepository memoryRepository;
-  private final AuthenticationUtil authenticationUtil;
   private final AIService aiService;
+  private final CharacterService characterService;
 
-  public HomeResponse getHome() {
+  public HomeResponse getHome(Long memberId) {
+
+    Baby baby = babyRepository.findByMemberId(memberId)
+        .orElseThrow(() -> new BusinessException(BaseResponseStatus.NOT_FOUND_BABY));
 
     LocalDate today = LocalDate.now();
-
-    String providerId = authenticationUtil.getProviderId();
-    Baby baby = babyRepository.findByProviderId(providerId)
-        .orElseThrow(() -> new BusinessException(BaseResponseStatus.NOT_FOUND_BABY));
-    String babyName = baby.getName();
-
     LocalDate dueDate = baby.getDueDate();
     Integer dDay = (int) ChronoUnit.DAYS.between(today, dueDate);
 
-    Character character = baby.getCharacter();
-    String characterUrl = character.getImageUrl();
+    String characterUrl = characterService.getCharacterImage(baby);
 
-    // 말풍선
-    Member member = memberRepository.findByProviderId(providerId)
+    Member member = memberRepository.findById(memberId)
         .orElseThrow(() -> new BusinessException(BaseResponseStatus.NOT_FOUND_MEMBER));
-    String speechBubble = aiService.getCharacterBubble(character,member.getFamilyRole());
+    String speechBubble = aiService.getCharacterBubble(baby.getCharacter(), member.getFamilyRole());
 
-    // 최근 태교 카드
-    List<Memory> recentImages = memoryRepository.findTop3ByBabyOrderByCreatedAtDesc(baby);
-    List<String> recentImageUrls = recentImages.stream()
-        .map(Memory::getImageUrl).collect(Collectors.toList());
+    List<MemoryImageDTO> resentMemories =
+      memoryRepository.findTop3ByBabyOrderByCreatedAtDesc(baby).stream().map(MemoryImageDTO::from).toList();
 
     return HomeResponse.builder()
         .today(today)
-        .babyName(babyName)
+        .babyName(baby.getName())
         .dDay(dDay)
         .characterUrl(characterUrl)
         .speechBubble(speechBubble)
-        .memoryUrls(recentImageUrls).build();
+        .memories(resentMemories).build();
   }
 }
